--- a/style.css
+++ b/style.css
@@ -4,20 +4,25 @@ body {
 
 /* news card */
 
-@media only screen and (max-width: 575px) {
-    .news-card {
-        max-width: 400px;
-    }
+.news-author-img {
+    width: 38px;
+    height: 38px;
+}
 
-    .news-card .thumbnail {
-        width: 100%;
-        object-fit: cover;
-        height: 250px;
+@media only screen and (max-width: 575px) {
+    #all-news-in-a-category {
+        max-width: 400px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .read-more-btn {
         width: 100%;
+    }
+
+    .news-card .thumbnail {
+        object-fit: cover;
+        height: 350px !important;
+        object-position: 0% 0%;
     }
 }
